added errors to the response
