# internal/handlers/errors.go
@@ -8,11 +8,21 @@ const (
 	ErrStatusBadRequest = "BAD_REQUEST"
 )
 
+// ErrorResponse ответ ошибка
+type ErrorResponse struct {
+	Err Error
+}
+
+type Error struct {
+	Code    string
+	Message string
+}
+
 func respondWithError(c *gin.Context, code int, errStatus string, err error) {
 	c.JSON(
 		code,
 		gin.H{
-			"error": gin.H{
+			"err": gin.H{
 				"code":    errStatus,
 				"message": err.Error(),
 			},
